# MTM-HW3

./: CMakeLists.txt  README.md
MTM-HW3-master/234122-HW3/: CMakeLists.txt  makefile  map.h  mtm_ex3.h  mtmflix.c  mtmflix.h  series.c  series.h
MTM-HW3-master/234122-HW3/map_mtm/: map_mtm.c
MTM-HW3-master/234122-HW3/tests/: aux_macros.h  mtmFlixTestEx.c  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.sh  test2.c  test3.c  test4.c
MTM-HW3-master/234122-HW3/tests/outFiles/: expmake  expout1  expout10  expout12  expout13  expout14  expout15  expout16  expout17  expout2  expout3  expout4  expout5  expout6  expout7  expout8  expout9  out10  out11  out13  out14  out15  out16  out9
